--- a/common/vulinbox/route.html
+++ b/common/vulinbox/route.html
@@ -38,46 +38,54 @@
 
 <body>
 
+<div style="margin-left: 20px">
+    <h1>SQL 注入 Case</h1>
+    <ol>
+        <li><a target="_blank" href="/user/by-id-safe?id=1">安全的 SQL 注入</a></li>
+        <li><a target="_blank" href="/user/id?id=1">不安全的 SQL 注入(ID)</a></li>
+        <li><a target="_blank" href="/user/name?name=admin">不安全的 SQL 注入(NAME)</a></li>
+        <li><a target="_blank" href='/ssrf-json-in-get?json={"abc":%20123,%20"ref":%20"http://www.baidu.com"}'>SSRF GET
+            中
+            JSON 参数情况</a></li>
+    </ol>
 
-<h1>SQL 注入 Case</h1>
-<ol>
-    <li><a target="_blank" href="/user/by-id-safe?id=1">安全的 SQL 注入</a></li>
-    <li><a target="_blank" href="/user/id?id=1">不安全的 SQL 注入(ID)</a></li>
-    <li><a target="_blank" href="/user/name?name=admin">不安全的 SQL 注入(NAME)</a></li>
-    <li><a target="_blank" href='/ssrf-json-in-get?json={"abc":%20123,%20"ref":%20"http://www.baidu.com"}'>SSRF GET 中
-        JSON 参数情况</a></li>
-</ol>
-
-<h1>命令注入测试用例</h1>
-<ol>
-    <li><a target="_blank" href='/ping/cmd/shlex?ip=127.0.0.1'>Shlex 解析的命令注入</a></li>
-    <li><a target="_blank" href='/ping/cmd/bash?ip=127.0.0.1'>Bash 解析的命令注入</a></li>
-</ol>
-
-
-<h1>SSRF</h1>
-<ol>
-    <li><a target="_blank" href='/ssrf-in-get?url=http://www.baidu.com/'>SSRF GET 中 URL 参数情况</a></li>
-    <li><a target="_blank" href='/ssrf-in-post'>SSRF POST 中 URL 参数情况</a></li>
-    <li><a target="_blank" href='/ssrf-in-post-multipart'>SSRF POST 中 URL 参数情况 - Multipart FormData</a></li>
-    <li><a target="_blank" href='/ssrf-in-json-body'>SSRF JSON Body 中 REF 为 URL</a></li>
-    <li><a target="_blank" href='/ssrf-json-in-post-param'>SSRF POST 中有个 JSON 参数，其中 REF 为 URL 的情况</a></li>
+    <h1>命令注入测试用例</h1>
+    <ol>
+        <li><a target="_blank" href='/ping/cmd/shlex?ip=127.0.0.1'>Shlex 解析的命令注入</a></li>
+        <li><a target="_blank" href='/ping/cmd/bash?ip=127.0.0.1'>Bash 解析的命令注入</a></li>
+    </ol>
 
 
-</ol>
+    <h1>SSRF</h1>
+    <ol>
+        <li><a target="_blank" href='/ssrf-in-get?url=http://www.baidu.com/'>SSRF GET 中 URL 参数情况</a></li>
+        <li><a target="_blank" href='/ssrf-in-post'>SSRF POST 中 URL 参数情况</a></li>
+        <li><a target="_blank" href='/ssrf-in-post-multipart'>SSRF POST 中 URL 参数情况 - Multipart FormData</a></li>
+        <li><a target="_blank" href='/ssrf-in-json-body'>SSRF JSON Body 中 REF 为 URL</a></li>
+        <li><a target="_blank" href='/ssrf-json-in-post-param'>SSRF POST 中有个 JSON 参数，其中 REF 为 URL 的情况</a>
+        </li>
 
-<h1>表达式注入</h1>
-<ol>
-    <li><a target="_blank" href='/expr/injection?a=1'>表达式注入1</a></li>
-    <li><a target="_blank" href='/expr/injection?b={"a": 1}'>表达式注入2</a></li>
-    <li><a target="_blank" href='/expr/injection?c=abc'>表达式注入3</a></li>
-</ol>
+
+    </ol>
+
+    <h1>表达式注入</h1>
+    <ol>
+        <li><a target="_blank" href='/expr/injection?a=1'>表达式注入1</a></li>
+        <li><a target="_blank" href='/expr/injection?b={"a": 1}'>表达式注入2</a></li>
+        <li><a target="_blank" href='/expr/injection?c=abc'>表达式注入3</a></li>
+    </ol>
 
 
-<h1>Websocket测试案例</h1>
-<ol>
-    <li><a target="_blank" href='/websocket/'>Websocket</a></li>
-</ol>
+    <h1>Websocket测试案例</h1>
+    <ol>
+        <li><a target="_blank" href='/websocket/'>Websocket</a></li>
+    </ol>
+
+    <h1>登陆 JWT</h1>
+    <ol>
+        <li><a href="/jwt/login" target="_blank">登陆（JWT）</a></li>
+    </ol>
+</div>
 
 
 </body>
