新增一个 aes ecb 的基础案例

--- a/common/vulinbox/route.html
+++ b/common/vulinbox/route.html
@@ -85,6 +85,11 @@
     <ol>
         <li><a href="/jwt/login" target="_blank">登陆（JWT）</a></li>
     </ol>
+
+    <h1>Crypto JS Playground</h1>
+    <ol>
+        <li><a href="/crypto/js/basic" target="_blank">CryptoJS 加密表单爆破练习</a></li>
+    </ol>
 </div>
 
 
