--- a/common/vulinbox/route.html
+++ b/common/vulinbox/route.html
@@ -86,9 +86,10 @@
         <li><a href="/jwt/login" target="_blank">登陆（JWT）</a></li>
     </ol>
 
-    <h1>Crypto JS Playground</h1>
+    <h1>Crypto JS/SM Playground</h1>
     <ol>
-        <li><a href="/crypto/js/basic" target="_blank">CryptoJS 加密表单爆破练习</a></li>
+        <li><a href="/crypto/js/basic" target="_blank">CryptoJS 加密表单爆破练习(AES-ECB PKCS7)</a></li>
+        <li><a href="/crypto/sm4" target="_blank">Crypto SM4 加密表单爆破练习(SM4)</a></li>
     </ol>
 </div>
 
