--- a/common/vulinbox/route.html
+++ b/common/vulinbox/route.html
@@ -88,7 +88,9 @@
 
     <h1>Crypto JS/SM Playground</h1>
     <ol>
-        <li><a href="/crypto/js/basic" target="_blank">CryptoJS 加密表单爆破练习(AES-ECB PKCS7)</a></li>
+        <li><a href="/crypto/js/basic" target="_blank">AES-ECB CryptoJS 加密表单（附带密码）</a></li>
+        <li><a href="/crypto/js/rsa" target="_blank">RSA: CryptoJS 加密表单提交（附带公私钥）</a></li>
+        <li><a href="/crypto/js/rsa/fromserver" target="_blank">RSA: CryptoJS 加密表单（前置公私钥）</a></li>
         <li><a href="/crypto/sm4" target="_blank">Crypto SM4 加密表单爆破练习(SM4)</a></li>
     </ol>
 </div>
