--- a/common/vulinbox/vul_cryptojs_template.html
+++ b/common/vulinbox/vul_cryptojs_template.html
@@ -7,27 +7,13 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>CryptoJS 加密表单提交（AES-ECB Pkcs7padding）</title>
 
-    <!-- 引入 CDN Crypto.js 开始 AES加密 注意引入顺序 -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/4.0.0/core.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/4.0.0/enc-base64.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/4.0.0/md5.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/4.0.0/evpkdf.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/4.0.0/cipher-core.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/4.0.0/aes.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/4.0.0/pad-pkcs7.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/4.0.0/mode-ecb.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/4.0.0/enc-utf8.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/4.0.0/enc-hex.min.js"></script>
-    <!-- 引入 CDN Crypto.js 结束 -->
-
-
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
 
 <div class="container">
-    <h1 class="mt-4">AES-ECB 加密</h1>
+    <h1 class="mt-4">需要加密提交的表单内容</h1>
     <form id="json-form" class="mt-4">
         <div class="mb-3">
             <label for="username" class="form-label">UserName</label>
@@ -53,30 +39,25 @@
 </div>
 
 <script>
-    const key = CryptoJS.enc.Utf8.parse("1234123412341234"); // 十六位十六进制数作为密钥
-    const iv = CryptoJS.enc.Utf8.parse("abcdabcdabcdabcd");  // 十六位十六进制数作为密钥偏移量
+    async function generateKey() {
+        return await crypto.subtle.generateKey({
+            name: "AES-CBC",
+            length: 128, //can be  128, 192, or 256
+        }, true, ["encrypt", "decrypt"]);
+    }
+
+    const keyPair = generateKey()
+    console.info(keyPair)
+
 
     // 解密方法
     function Decrypt(word) {
-        let encryptedHexStr = CryptoJS.enc.Hex.parse(word);
-        let srcs = CryptoJS.enc.Base64.stringify(encryptedHexStr);
-        let decrypt = CryptoJS.AES.decrypt(srcs, key, {
-            iv: iv,
-            mode: CryptoJS.mode.ECB,
-            padding: CryptoJS.pad.Pkcs7
-        });
-        let decryptedStr = decrypt.toString(CryptoJS.enc.Utf8);
-        return decryptedStr.toString();
+        return word
     }
 
     // 加密方法
     function Encrypt(word) {
-        let srcs = CryptoJS.enc.Utf8.parse(JSON.stringify(word));
-        let encrypted = CryptoJS.AES.encrypt(srcs, key, {
-            mode: CryptoJS.mode.ECB,
-            padding: CryptoJS.pad.Pkcs7
-        });
-        return encrypted.toString();
+        return word
     }
 
     function submitJSON(event) {
