more difficult situation rsa-aes-gcm

--- a/common/vulinbox/route.html
+++ b/common/vulinbox/route.html
@@ -92,6 +92,7 @@
         <li><a href="/crypto/js/rsa" target="_blank">RSA: CryptoJS 加密表单提交（附带公私钥）</a></li>
         <li><a href="/crypto/js/rsa/fromserver" target="_blank">RSA: CryptoJS 加密表单（前置公私钥）</a></li>
         <li><a href="/crypto/js/rsa/fromserver/response" target="_blank">RSA: CryptoJS 加密表单（响应加密 + 前置公私钥）</a></li>
+        <li><a href="/crypto/js/rsa/fromserver/response/aes-gcm" target="_blank">RSA+(AES-GCM): CryptoJS 加密表单（响应加密 + 前置公私钥）</a></li>
         <li><a href="/crypto/sm4" target="_blank">Crypto SM4 加密表单爆破练习(SM4)</a></li>
     </ol>
 </div>
