--- a/common/vulinbox/route_safe.html
+++ b/common/vulinbox/route_safe.html
@@ -49,13 +49,6 @@
             JSON 参数情况</a></li>
     </ol>
 
-    <h1>命令注入测试用例</h1>
-    <ol>
-        <li><a target="_blank" href='/ping/cmd/shlex?ip=127.0.0.1'>Shlex 解析的命令注入</a></li>
-        <li><a target="_blank" href='/ping/cmd/bash?ip=127.0.0.1'>Bash 解析的命令注入</a></li>
-    </ol>
-
-
     <h1>SSRF</h1>
     <ol>
         <li><a target="_blank" href='/ssrf-in-get?url=http://www.baidu.com/'>SSRF GET 中 URL 参数情况</a></li>
@@ -91,9 +84,11 @@
         <li><a href="/crypto/js/basic" target="_blank">AES-ECB CryptoJS 加密表单（附带密码）</a></li>
         <li><a href="/crypto/js/rsa" target="_blank">RSA: CryptoJS 加密表单提交（附带公私钥）</a></li>
         <li><a href="/crypto/js/rsa/fromserver" target="_blank">RSA: CryptoJS 加密表单（前置公私钥）</a></li>
-        <li><a href="/crypto/js/rsa/fromserver/response" target="_blank">RSA: CryptoJS 加密表单（响应加密 + 前置公私钥）</a></li>
-        <li><a href="/crypto/js/rsa/fromserver/response/aes-gcm" target="_blank">RSA+(AES-GCM): CryptoJS 加密表单（响应加密 + 前置公私钥）</a></li>
-<!--        <li><a href="/crypto/sm4" target="_blank">Crypto SM4 加密表单爆破练习(SM4)</a></li>-->
+        <li><a href="/crypto/js/rsa/fromserver/response" target="_blank">RSA: CryptoJS 加密表单（响应加密 +
+            前置公私钥）</a></li>
+        <li><a href="/crypto/js/rsa/fromserver/response/aes-gcm" target="_blank">RSA+(AES-GCM): CryptoJS 加密表单（响应加密
+            + 前置公私钥）</a></li>
+        <!--        <li><a href="/crypto/sm4" target="_blank">Crypto SM4 加密表单爆破练习(SM4)</a></li>-->
     </ol>
 </div>
 
