--- a/common/vulinbox/route_safe.html
+++ b/common/vulinbox/route_safe.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <!-- 这个文件主要会剔除靶场的不安全的功能，只保留不影响安全的业务场景和漏洞问题 -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <style>
