--- a/common/vulinbox/vul_user_login.html
+++ b/common/vulinbox/vul_user_login.html
@@ -7,12 +7,26 @@
   <title>Login</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
+
 <body>
 <div class="container">
   <div id="authcheck" class="row justify-content-center mt-5">
     <div class="col-md-4">
       <h2 class="text-center mb-4">登录</h2>
       <div id="message" style="color: red;"></div>
+<!--      <form id="loginForm">-->
+<!--        <div class="mb-3">-->
+<!--          <label for="username" class="form-label">用户名</label>-->
+<!--          <input type="text" class="form-control" id="username" name="username" required>-->
+<!--        </div>-->
+<!--        <div class="mb-3">-->
+<!--          <label for="password" class="form-label">密码</label>-->
+<!--          <input type="password" class="form-control" id="password" name="password" required>-->
+<!--        </div>-->
+<!--        <button id="registerButton" class="btn btn-success w-100 mt-2">注册</button>-->
+<!--        <p></p>-->
+<!--        <button type="submit" class="btn btn-primary w-100">Login</button>-->
+<!--      </form>-->
       <form id="loginForm">
         <div class="mb-3">
           <label for="username" class="form-label">用户名</label>
@@ -22,7 +36,14 @@
           <label for="password" class="form-label">密码</label>
           <input type="password" class="form-control" id="password" name="password" required>
         </div>
-        <button type="submit" class="btn btn-primary w-100">Login</button>
+        <div class="row">
+          <div class="col-md-6">
+            <button id="registerButton" class="btn btn-success w-100 mt-2">注册</button>
+          </div>
+          <div class="col-md-6">
+            <button type="submit" class="btn btn-primary w-100 mt-2">登录</button>
+          </div>
+        </div>
       </form>
     </div>
   </div>
@@ -31,6 +52,7 @@
 <script>
   const loginForm = document.getElementById('loginForm');
   const messageDiv = document.getElementById('message');
+  const registerButton = document.getElementById('registerButton'); // 获取注册按钮元素
 
   loginForm.addEventListener('submit', function(event) {
     event.preventDefault(); // 阻止默认表单提交行为
@@ -61,6 +83,12 @@
       password: password
     });
     xhr.send(data);
+  });
+
+  // 注册按钮点击事件处理程序
+  registerButton.addEventListener('click', function() {
+    // 跳转到注册页面
+    window.location.href = '/user/register';
   });
 </script>
 </body>
