--- a/common/vulinbox/vul_user_login.html
+++ b/common/vulinbox/vul_user_login.html
@@ -14,20 +14,7 @@
     <div class="col-md-4">
       <h2 class="text-center mb-4">登录</h2>
       <div id="message" style="color: red;"></div>
-<!--      <form id="loginForm">-->
-<!--        <div class="mb-3">-->
-<!--          <label for="username" class="form-label">用户名</label>-->
-<!--          <input type="text" class="form-control" id="username" name="username" required>-->
-<!--        </div>-->
-<!--        <div class="mb-3">-->
-<!--          <label for="password" class="form-label">密码</label>-->
-<!--          <input type="password" class="form-control" id="password" name="password" required>-->
-<!--        </div>-->
-<!--        <button id="registerButton" class="btn btn-success w-100 mt-2">注册</button>-->
-<!--        <p></p>-->
-<!--        <button type="submit" class="btn btn-primary w-100">Login</button>-->
-<!--      </form>-->
-      <form id="loginForm">
+      <form method="POST" id="loginForm">
         <div class="mb-3">
           <label for="username" class="form-label">用户名</label>
           <input type="text" class="form-control" id="username" name="username" required>
