--- a/common/vulinbox/route_safe.html
+++ b/common/vulinbox/route_safe.html
@@ -45,9 +45,6 @@
         <li><a target="_blank" href="/user/by-id-safe?id=1">安全的 SQL 注入</a></li>
         <li><a target="_blank" href="/user/id?id=1">不安全的 SQL 注入(ID)</a></li>
         <li><a target="_blank" href="/user/name?name=admin">不安全的 SQL 注入(NAME)</a></li>
-        <li><a target="_blank" href='/ssrf-json-in-get?json={"abc":%20123,%20"ref":%20"http://www.baidu.com"}'>SSRF GET
-            中
-            JSON 参数情况</a></li>
     </ol>
 
     <h1>SSRF</h1>
@@ -56,9 +53,8 @@
         <li><a target="_blank" href='/ssrf-in-post'>SSRF POST 中 URL 参数情况</a></li>
         <li><a target="_blank" href='/ssrf-in-post-multipart'>SSRF POST 中 URL 参数情况 - Multipart FormData</a></li>
         <li><a target="_blank" href='/ssrf-in-json-body'>SSRF JSON Body 中 REF 为 URL</a></li>
-        <li><a target="_blank" href='/ssrf-json-in-post-param'>SSRF POST 中有个 JSON 参数，其中 REF 为 URL 的情况</a>
-        </li>
-
+        <li><a target="_blank" href='/ssrf-json-in-post-param'>SSRF POST 中有个 JSON 参数，其中 REF 为 URL 的情况</a></li>
+        <li><a target="_blank" href='/ssrf-json-in-get?json={"abc":%20123,%20"ref":%20"http://www.baidu.com"}'>SSRF GET 中 JSON 参数情况</a></li>
 
     </ol>
 
