--- a/common/vulinbox/vul_user_login.html
+++ b/common/vulinbox/vul_user_login.html
@@ -1,82 +1,130 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Login</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Login</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
+
+<style>
+    .mb-3 {
+        position: relative;
+    }
+
+    #codeSnippet {
+        margin-top: 10px;
+        /*position: absolute;*/
+        /*top: 8px;*/
+        /*right: -130px;*/
+        border: 1px solid #1a73e8;
+    }
+
+    .inputUsername {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+    }
+</style>
 
 <body>
 <div class="container">
-  <div id="authcheck" class="row justify-content-center mt-5">
-    <div class="col-md-4">
-      <h2 class="text-center mb-4">登录</h2>
-      <div id="message" style="color: red;"></div>
-      <form method="POST" id="loginForm">
-        <div class="mb-3">
-          <label for="username" class="form-label">用户名</label>
-          <input type="text" class="form-control" id="username" name="username" required>
+    <div id="authcheck" class="row justify-content-center mt-5">
+        <div class="col-md-4">
+            <h2 class="text-center mb-4">登录</h2>
+            <div id="message" style="color: red;"></div>
+            <form method="POST" id="loginForm">
+                <div class="mb-3">
+                    <div class="inputUsername">
+                        <label for="username" class="form-label">用户名</label>
+                        <svg id="showCodeButton" xmlns="http://www.w3.org/2000/svg" width="16" height="16"
+                             fill="currentColor" class="bi bi-question-circle-fill" viewBox="0 0 16 16">
+                            <path d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zM5.496 6.033h.825c.138 0 .248-.113.266-.25.09-.656.54-1.134 1.342-1.134.686 0 1.314.343 1.314 1.168 0 .635-.374.927-.965 1.371-.673.489-1.206 1.06-1.168 1.987l.003.217a.25.25 0 0 0 .25.246h.811a.25.25 0 0 0 .25-.25v-.105c0-.718.273-.927 1.01-1.486.609-.463 1.244-.977 1.244-2.056 0-1.511-1.276-2.241-2.673-2.241-1.267 0-2.655.59-2.75 2.286a.237.237 0 0 0 .241.247zm2.325 6.443c.61 0 1.029-.394 1.029-.927 0-.552-.42-.94-1.029-.94-.584 0-1.009.388-1.009.94 0 .533.425.927 1.01.927z"/>
+                        </svg>
+                    </div>
+
+                    <input type="text" class="form-control" id="username" name="username" required>
+
+                </div>
+                <div class="mb-3">
+                    <label for="password" class="form-label">密码</label>
+                    <input type="password" class="form-control" id="password" name="password" required>
+                </div>
+                <div class="row">
+                    <div class="col-md-6">
+                        <button id="registerButton" class="btn btn-success w-100 mt-2">注册</button>
+                    </div>
+                    <div class="col-md-6">
+                        <button type="submit" class="btn btn-primary w-100 mt-2">登录</button>
+                    </div>
+                </div>
+            </form>
         </div>
-        <div class="mb-3">
-          <label for="password" class="form-label">密码</label>
-          <input type="password" class="form-control" id="password" name="password" required>
-        </div>
-        <div class="row">
-          <div class="col-md-6">
-            <button id="registerButton" class="btn btn-success w-100 mt-2">注册</button>
-          </div>
-          <div class="col-md-6">
-            <button type="submit" class="btn btn-primary w-100 mt-2">登录</button>
-          </div>
-        </div>
-      </form>
+
     </div>
-  </div>
+
+    <div>
+        <pre id="codeSnippet" style="display: none;"></pre>
+    </div>
 </div>
 
 <script>
-  const loginForm = document.getElementById('loginForm');
-  const messageDiv = document.getElementById('message');
-  const registerButton = document.getElementById('registerButton'); // 获取注册按钮元素
+    const loginForm = document.getElementById('loginForm');
+    const messageDiv = document.getElementById('message');
+    const registerButton = document.getElementById('registerButton'); // 获取注册按钮元素
 
-  loginForm.addEventListener('submit', function(event) {
-    event.preventDefault(); // 阻止默认表单提交行为
+    loginForm.addEventListener('submit', function (event) {
+        event.preventDefault(); // 阻止默认表单提交行为
 
-    const username = document.getElementById('username').value;
-    const password = document.getElementById('password').value;
+        const username = document.getElementById('username').value;
+        const password = document.getElementById('password').value;
 
-    const xhr = new XMLHttpRequest();
-    xhr.open('POST', '/user/login');
-    xhr.setRequestHeader('Content-Type', 'application/json');
+        const xhr = new XMLHttpRequest();
+        xhr.open('POST', '/user/login');
+        xhr.setRequestHeader('Content-Type', 'application/json');
 
-    xhr.onload = function() {
-      if (xhr.status === 200) {
-        const response = JSON.parse(xhr.responseText);
-        messageDiv.textContent = response.message;
-        messageDiv.style.color = 'green';
-        if (response.success) {
-          // 登录成功，跳转到用户信息页面
-          window.location.href = '/user/profile?id='+response.id;
-        }
-      } else {
-        messageDiv.textContent = 'Login failed: ' + xhr.responseText;
-      }
-    };
+        xhr.onload = function () {
+            if (xhr.status === 200) {
+                const response = JSON.parse(xhr.responseText);
+                messageDiv.textContent = response.message;
+                messageDiv.style.color = 'green';
+                if (response.success) {
+                    // 登录成功，跳转到用户信息页面
+                    window.location.href = '/user/profile?id=' + response.id;
+                }
+            } else {
+                messageDiv.textContent = 'Login failed: ' + xhr.responseText;
+            }
+        };
 
-    const data = JSON.stringify({
-      username: username,
-      password: password
+        const data = JSON.stringify({
+            username: username,
+            password: password
+        });
+        xhr.send(data);
     });
-    xhr.send(data);
-  });
 
-  // 注册按钮点击事件处理程序
-  registerButton.addEventListener('click', function() {
-    // 跳转到注册页面
-    window.location.href = '/user/register';
-  });
+    // 注册按钮点击事件处理程序
+    registerButton.addEventListener('click', function () {
+        // 跳转到注册页面
+        window.location.href = '/user/register';
+    });
+
+    const codeSnippet = document.getElementById("codeSnippet");
+    const showCodeButton = document.getElementById("showCodeButton");
+
+    showCodeButton.addEventListener("click", function () {
+        if (codeSnippet.style.display === "block") {
+            codeSnippet.style.display = "none";
+        } else {
+            codeSnippet.style.display = "block";
+            codeSnippet.textContent = `后端代码:
+sql := \`select * from vulin_users where username = '\` + username + \`' AND password = '\` + password + \`';\`
+db := s.db.Raw(sql).Debug()
+            `
+        }
+    });
 </script>
 </body>
 </html>
