--- a/common/vulinbox/vul_user_profile.html
+++ b/common/vulinbox/vul_user_profile.html
@@ -7,6 +7,15 @@
     <title>User Profile</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.0/css/bootstrap.min.css">
 </head>
+<style>
+    #codeSnippet {
+        margin-top: 10px;
+        /*position: absolute;*/
+        /*top: 8px;*/
+        /*right: -130px;*/
+        border: 1px solid #1a73e8;
+    }
+</style>
 <body>
 <div class="container">
     <h2 class="text-center mt-5" style="color: #007bff;">User Profile</h2>
@@ -47,13 +56,22 @@
                 <td>{{.Role}}</td>
             </tr>
             <tr>
-                <th>备注</th>
+                <th>备注
+                    <svg id="showCodeButton" xmlns="http://www.w3.org/2000/svg" width="16" height="16"
+                         fill="currentColor" class="bi bi-question-circle-fill" viewBox="0 0 16 16">
+                        <path d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zM5.496 6.033h.825c.138 0 .248-.113.266-.25.09-.656.54-1.134 1.342-1.134.686 0 1.314.343 1.314 1.168 0 .635-.374.927-.965 1.371-.673.489-1.206 1.06-1.168 1.987l.003.217a.25.25 0 0 0 .25.246h.811a.25.25 0 0 0 .25-.25v-.105c0-.718.273-.927 1.01-1.486.609-.463 1.244-.977 1.244-2.056 0-1.511-1.276-2.241-2.673-2.241-1.267 0-2.655.59-2.75 2.286a.237.237 0 0 0 .241.247zm2.325 6.443c.61 0 1.029-.394 1.029-.927 0-.552-.42-.94-1.029-.94-.584 0-1.009.388-1.009.94 0 .533.425.927 1.01.927z"/>
+                    </svg>
+                </th>
+
                 <td><input id="remakeInput" value="{{.Remake}}"/></td>
             </tr>
         </table>
 
         <button id="updateButton" type="submit" class="btn btn-primary mt-4">Update Profile</button>
     </form>
+    <div>
+        <pre id="codeSnippet" style="display: none;"></pre>
+    </div>
 </div>
 
 <script>
@@ -63,6 +81,7 @@
 
         // 获取要更新的年龄值
         const remake = document.getElementById("remakeInput").value;
+
         let id = "{{.ID}}"
         id = parseInt(id, 10);
         // 创建一个XMLHttpRequest对象
@@ -91,6 +110,7 @@
             if (xhr.status === 200) {
                 // 请求成功，根据需要执行逻辑
                 showNotification("Profile updated successfully.", "success");
+                location.reload();
             } else {
                 // 请求失败，根据需要执行逻辑
                 showNotification("Failed to update profile.", "danger");
@@ -112,6 +132,41 @@
             notification.style.display = "none";
         }, 3000);
     }
+
+    const codeSnippet = document.getElementById("codeSnippet");
+    const showCodeButton = document.getElementById("showCodeButton");
+
+    showCodeButton.addEventListener("click", function () {
+        if (codeSnippet.style.display === "block") {
+            codeSnippet.style.display = "none";
+        } else {
+            codeSnippet.style.display = "block";
+            codeSnippet.textContent = `后端代码:
+// 读取请求体数据
+body, err := ioutil.ReadAll(request.Body)
+if err != nil {
+    writer.Write([]byte(err.Error()))
+    writer.WriteHeader(http.StatusBadRequest)
+    return
+}
+
+// 过滤请求体内容
+lowerBody := strings.ToLower(string(body))
+filteredBody := strings.ReplaceAll(lowerBody, "<", "")
+filteredBody = strings.ReplaceAll(filteredBody, ">", "")
+filteredBody = strings.ReplaceAll(filteredBody, "script", "")
+
+// 解析过滤后的 JSON 数据
+var oldUser VulinUser
+err = json.Unmarshal([]byte(filteredBody), &oldUser)
+if err != nil {
+    writer.Write([]byte(err.Error()))
+    writer.WriteHeader(http.StatusBadRequest)
+    return
+}
+            `
+        }
+    });
 </script>
 
 </body>
