--- a/common/vulinbox/vul_user_profile.html
+++ b/common/vulinbox/vul_user_profile.html
@@ -68,6 +68,7 @@
         </table>
 
         <button id="updateButton" type="submit" class="btn btn-primary mt-4">Update Profile</button>
+        <button id="logoutButton" type="submit" class="btn btn-primary mt-4">LogOut</button>
     </form>
     <div>
         <pre id="codeSnippet" style="display: none;"></pre>
