--- a/common/vulinbox/route_safe.html
+++ b/common/vulinbox/route_safe.html
@@ -159,6 +159,16 @@
                 </ul>
             </div>
         </div>
+        <div class="col-md-6">
+            <div class="card" style="margin-top: 12px">
+                <div class="card-header">
+                    综合相关
+                </div>
+                <ul class="list-group list-group-flush">
+                    <li class="list-group-item"><a href='/user/login' target="_blank">Web 后台</a></li>
+                </ul>
+            </div>
+        </div>
     </div>
 </div>
 
