--- a/common/vulinbox/route_safe.html
+++ b/common/vulinbox/route_safe.html
@@ -81,8 +81,8 @@
                     ShiroVuls Simulation
                 </div>
                 <ul class="list-group list-group-flush">
-                    <li class="list-group-item"><a target="_blank" href="/shiro/cbc">Shiro CBC 低版本KEY(<1.4.2)</a></li>
-                    <li class="list-group-item"><a target="_blank" href="/shiro/gcm">Shiro GCM 弱 KEY(>=1.4.2)</a></li>
+                    <li class="list-group-item"><a target="_blank" href="/shiro/cbc">Shiro CBC 默认KEY(<1.4.2)</a></li>
+                    <li class="list-group-item"><a target="_blank" href="/shiro/gcm">Shiro GCM 默认KEY(>=1.4.2)</a></li>
                 </ul>
             </div>
         </div>
