新增了一个有问题的验证码案例

--- a/common/vulinbox/route.html
+++ b/common/vulinbox/route.html
@@ -215,6 +215,10 @@
                     <li class="list-group-item"><a href='/verification/op' target="_blank">基础验证码拦截的表单提交</a>
                     </li>
                 </ul>
+                <ul class="list-group list-group-flush">
+                    <li class="list-group-item"><a href='/verification/bad/op' target="_blank">有验证码拦截的表单提交（逻辑问题）</a>
+                    </li>
+                </ul>
             </div>
         </div>
     </div>
