--- a/common/vulinbox/route_safe.html
+++ b/common/vulinbox/route_safe.html
@@ -22,7 +22,7 @@
                         <a class="nav-link" target="_blank" href="https://yaklang.com">Yaklang.IO</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" target="_blank" href="https://githib.com/yaklang">Yak Project 开源地址</a>
+                        <a class="nav-link" target="_blank" href="https://github.com/yaklang">Yak Project 开源地址</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" target="_blank" href="https://github.com/yaklang/yaklang/tree/main/common/vulinbox">Vulinbox 靶场源码</a>
