add basic jsonp case

--- a/common/vulinbox/route.html
+++ b/common/vulinbox/route.html
@@ -208,6 +208,17 @@
         <div class="col-md-6">
             <div class="card" style="margin-top: 12px">
                 <div class="card-header">
+                    CORS 与 JSONP 跨域案例
+                </div>
+                <ul class="list-group list-group-flush">
+                    <li class="list-group-item"><a href='/jsonp/basic' target="_blank">JSONP 的最基础案例</a></li>
+                    <li class="list-group-item"><a href='/jsonp/op/via/cookie' target="_blank">JSONP 根据 Cookie 状态加载前端资源的案例</a></li>
+                </ul>
+            </div>
+        </div>
+        <div class="col-md-6">
+            <div class="card" style="margin-top: 12px">
+                <div class="card-header">
                     高级场景前端加密
                 </div>
                 <ul class="list-group list-group-flush">
