--- a/common/vulinbox/route.html
+++ b/common/vulinbox/route.html
@@ -17,7 +17,7 @@
 <header>
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
         <div class="container">
-            <a class="navbar-brand" href="/">Vulinbox!</a>
+            <a class="navbar-brand" href="/">Vulinbox - Agent</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -25,14 +25,10 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link" target="_blank" href="https://yaklang.com">Yaklang.IO</a>
+                        <a class="nav-link" target="_blank" href="https://yaklang.com">yaklang.io</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" target="_blank" href="https://github.com/yaklang">Yak Project 开源地址</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" target="_blank"
-                           href="https://github.com/yaklang/yaklang/tree/main/common/vulinbox">Vulinbox 靶场源码</a>
+                        <a class="nav-link" target="_blank" href="https://github.com/yaklang">Page</a>
                     </li>
                 </ul>
             </div>
@@ -42,7 +38,7 @@
 
 <div class="container mt-3">
     <input type="text" class="form-control" id="search-input"
-           placeholder="快速过滤筛选靶场信息">
+           placeholder="快速过滤筛选案例">
 </div>
 
 <!-- Your page content goes here -->
