--- a/common/vulinbox/route.html
+++ b/common/vulinbox/route.html
@@ -28,7 +28,7 @@
                         <a class="nav-link" target="_blank" href="https://yaklang.com">yaklang.io</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" target="_blank" href="https://github.com/yaklang">Page</a>
+                        <a class="nav-link" target="_blank" href="/_/ws">WS Proto Agent</a>
                     </li>
                 </ul>
             </div>
@@ -195,8 +195,10 @@
                     Pipeline 仿真请求走私
                 </div>
                 <ul class="list-group list-group-flush">
-                    <li class="list-group-item"><a target="_blank" href="/csrf">使用请求走私访问中间件不应该转发访问的 /admin </a></li>
-                    <li class="list-group-item"><a target="_blank" href="/csrf">使用请求走私绕过一个WAF进行SQL注入 </a></li>
+                    <li class="list-group-item"><a target="_blank" href="/csrf">使用请求走私访问中间件不应该转发访问的
+                        /admin </a></li>
+                    <li class="list-group-item"><a target="_blank" href="/csrf">使用请求走私绕过一个WAF进行SQL注入 </a>
+                    </li>
                 </ul>
             </div>
         </div>
@@ -207,7 +209,8 @@
                 </div>
                 <ul class="list-group list-group-flush">
                     <li class="list-group-item"><a target="_blank" href="/csrf">在当前页面中使用的 Worker</a></li>
-                    <li class="list-group-item"><a target="_blank" href="/csrf">可以跨页面调用服务的 SharedWorker</a></li>
+                    <li class="list-group-item"><a target="_blank" href="/csrf">可以跨页面调用服务的 SharedWorker</a>
+                    </li>
                 </ul>
             </div>
         </div>
