--- a/common/vulinbox/route.html
+++ b/common/vulinbox/route.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/static/js/bootstrap_5.3/bootstrap.min.css">
+    <link rel="icon" href="/static/favicon.ico">
     <style>
         .list-group-item:hover {
             background-color: rgba(0, 0, 0, 0.1); /* Change the color as per your preference */
