--- a/common/vulinbox/auto_route.html
+++ b/common/vulinbox/auto_route.html
@@ -45,8 +45,8 @@
 <!-- Your page content goes here -->
 <div class="container mt-5">
     <div class="row">
+        {{range .}}
         <div class="col-md-6">
-            {{range .}}
             <div class="card" style="margin-top: 12px">
                 <div class="card-header">
                     {{.GroupName}}
@@ -57,8 +57,8 @@
                     {{end}}
                 </ul>
             </div>
-            {{end}}
         </div>
+        {{end}}
     </div>
 </div>
 
@@ -107,20 +107,20 @@
 <!-- 引入 Bootstrap JavaScript -->
 <script src="/static/js/bootstrap_5.3/popper.min.js"></script>
 <script src="/static/js/bootstrap_5.3/bootstrap.min.js"></script>
-<script>
-    document.addEventListener('DOMContentLoaded', function () {
-        const listItems = document.querySelectorAll('.list-group-item');
+<!--<script>-->
+<!--    document.addEventListener('DOMContentLoaded', function () {-->
+<!--        const listItems = document.querySelectorAll('.list-group-item');-->
 
-        listItems.forEach(function (listItem) {
-            const anchor = listItem.querySelector('a');
+<!--        listItems.forEach(function (listItem) {-->
+<!--            const anchor = listItem.querySelector('a');-->
 
-            if (anchor) {
-                listItem.addEventListener('click', function () {
-                    anchor.click()
-                });
-            }
-        });
-    });
-</script>
+<!--            if (anchor) {-->
+<!--                listItem.addEventListener('click', function () {-->
+<!--                    anchor.click()-->
+<!--                });-->
+<!--            }-->
+<!--        });-->
+<!--    });-->
+<!--</script>-->
 </body>
 </html>
