todo : 合理处理参数

--- a/common/vulinbox/auto_route.html
+++ b/common/vulinbox/auto_route.html
@@ -46,7 +46,7 @@
 <div class="container mt-5">
     <div class="row">
         {{range .}}
-        <div class="col-md-6">
+        <div class="col-md-6" {{.SafeStyle}} >
             <div class="card" style="margin-top: 12px">
                 <div class="card-header">
                     {{.GroupName}}
